5 Services and Networking/4 Use Ingress Rules to Expose Applications/ingress-app-com.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app.com
spec:
  rules:
  - host: "admin.app.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend
            port:
              number: 80
  - host: "web.foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
